fix: visited links in dark mode, use mvnd

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,5 +15,6 @@
 @media only screen and (prefers-color-scheme: dark) {
     :root[color-mode="user"] {
         --color-bg2: #4449;
+        --color-secondary: #118bee;
     }
 }
